--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 31 15:00:48 ICT 2018
-ndk.dir=E\:\\android\\Sdk\\ndk-bundle
-sdk.dir=E\:\\android\\Sdk
+#Fri Jul 31 10:42:09 ICT 2020
+sdk.dir=C\:\\Users\\001910947\\AppData\\Local\\Android\\Sdk
